doc: fix prototypes.
	* doc/specs/dictionary.tex,
	* doc/specs/group.tex,
	* doc/specs/pair.tex,
	* doc/specs/string.tex: here.

--- a/doc/specs/dictionary.tex
+++ b/doc/specs/dictionary.tex
@@ -47,10 +47,10 @@ properly.
   \lstinline|this| so that invocations to \lstinline|set| can be
   chained.  The possibly existing previous mapping is overriden.
 
-\item \lstinline|[\var{key}]=\var{value}|\\
+\item \lstinline|[]=(\var{key}, \var{value})|\\
   Syntactic sugar for \lstinline|set(\var{key}, \var{value})|.
 
-\item \lstinline|[\var{key}]|\\
+\item \lstinline|[](\var{key})|\\
   Syntactic sugar for \lstinline|get(\var{key})|.
 \end{itemize}
 
