--- a/doc/specs/group.tex
+++ b/doc/specs/group.tex
@@ -42,7 +42,7 @@ were one.
   \lstinline|this.\var{name} = \var{value}|
   actually updates the value of the slot \var{name} in
   the group members.
-\item \lstinline|<< \var{member}|\\
+\item \lstinline|'<<'(\var{member})|\\
   Syntactic sugar for \lstinline|add|.
 \end{itemize}
 
