--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -72,9 +72,9 @@ for (var v : "123")
   \var{other}.  The more alike the strings are, the smaller the
   distance is.
 \begin{urbiscript}[firstnumber=last]
-assert("foo".distance("foo") == 0);
-assert("bar".distance("baz") == 1);
-assert("foo".distance("bar") == 3);
+assert_eq("foo".distance("foo"), 0);
+assert_eq("bar".distance("baz"), 1);
+assert_eq("foo".distance("bar"), 3);
 \end{urbiscript}
 
 \item \lstinline|fresh|\\
@@ -93,30 +93,30 @@ String.fresh;
   \lstinline|this| by \var{to}, and return the result.
   \lstinline|this| is not modified.
 \begin{urbiscript}[firstnumber=last]
-assert("Hello, World!".replace("Hello", "Bonjour")
-                      .replace("World!", "Monde !")
-       == "Bonjour, Monde !");
+assert_eq("Hello, World!".replace("Hello", "Bonjour")
+                      .replace("World!", "Monde !"),
+       "Bonjour, Monde !");
 \end{urbiscript}
 
 \item \lstinline|size|\\
   Return the size of the string.
 \begin{urbiscript}[firstnumber=last]
-assert("foo".size == 3);
-assert("".size == 0);
+assert_eq("foo".size, 3);
+assert_eq("".size, 0);
 \end{urbiscript}
 
 \item \lstinline|toLower|\\
   Make lower case every upper case character in \lstinline|this| and
   return the result.  \lstinline|this| is not modified.
 \begin{urbiscript}[firstnumber=last]
-assert("Hello, World!".toLower == "hello, world!");
+assert_eq("Hello, World!".toLower, "hello, world!");
 \end{urbiscript}
 
 \item \lstinline|toUpper|\\
   Make upper case every lower case character in \lstinline|this| and
   return the result.  \lstinline|this| is not modified.
 \begin{urbiscript}[firstnumber=last]
-assert("Hello, World!".toUpper == "HELLO, WORLD!");
+assert_eq("Hello, World!".toUpper, "HELLO, WORLD!");
 \end{urbiscript}
 
 \item \lstinline|'%'(\var{args})|\\
@@ -135,19 +135,19 @@ assert("Hello, World!".toUpper == "HELLO, WORLD!");
 \item \lstinline|'*'(\var{n})|\\
   Return the concatentation of \lstinline|this| \var{n} times.
 \begin{urbiscript}[firstnumber=last]
-assert("foo" * 0 == "");
-assert("foo" * 1 == "foo");
-assert("foo" * 3 == "foofoofoo");
+assert_eq("foo" * 0, "");
+assert_eq("foo" * 1, "foo");
+assert_eq("foo" * 3, "foofoofoo");
 \end{urbiscript}
 
 \item \lstinline|'+'(\var{other})|\\
   Return the concatenation of \lstinline|this| and
   \lstinline|\var{other}.asString|.
 \begin{urbiscript}[firstnumber=last]
-assert("foo" + "bar" == "foobar");
-assert("foo" + "" == "foo");
-assert("foo" + 3 == "foo3");
-assert("foo" + [1, 2, 3] == "foo[1, 2, 3]");
+assert_eq("foo" + "bar", "foobar");
+assert_eq("foo" + "", "foo");
+assert_eq("foo" + 3, "foo3");
+assert_eq("foo" + [1, 2, 3], "foo[1, 2, 3]");
 \end{urbiscript}
 
 \item \lstinline|'<'(\var{other})|\\
@@ -165,8 +165,8 @@ assert(!("a" < "a"));
   Return the substring starting at \var{from}, up to and not including
   \var{to} (which defaults to \var{to} + 1).
 \begin{urbiscript}[firstnumber=last]
-assert("foobar"[0, 3], "foo");
-assert("foobar"[0], "b");
+assert_eq("foobar"[0, 3], "foo");
+assert_eq("foobar"[0], "f");
 \end{urbiscript}
 
 \item \lstinline|'[]='(\var{from}, \var{other})|\\
@@ -179,11 +179,11 @@ assert("foobar"[0], "b");
   \lstinline|this|.
 \begin{urbiscript}[firstnumber=last]
 var s1 = "foobar" | var s2 = s1 |
-assert(s1[0, 3] = "quux", "quux");
-assert(s1, "quuxbar");
-assert(s2, "quuxbar");
-assert(s1[4, 7] = "", "");
-assert(s2, "bar");
+assert_eq(s1[0, 3] = "quux", "quux");
+assert_eq(s1, "quuxbar");
+assert_eq(s2, "quuxbar");
+assert_eq(s1[4, 7] = "", "");
+assert_eq(s2, "quux");
 \end{urbiscript}
 \end{itemize}
 
