--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -25,6 +25,7 @@
 \input{specs/pair}
 \input{specs/pattern}
 \input{specs/primitive}
+\input{specs/singleton}
 \input{specs/string}
 \input{specs/system}
 \input{specs/system/platform}
