--- a/doc/specs/object.tex
+++ b/doc/specs/object.tex
@@ -28,7 +28,7 @@ assert(theObject === Object);
 \end{urbiscript}
 
 \item \lstinline|updateSlot(\var{name}, \var{value})|\\
-  Map the existing slot named \ \var{name} to \var{value}. Raise an
+  Map the existing slot named \var{name} to \var{value}. Raise an
   error if \var{name} was not defined.
 \begin{urbiscript}[firstnumber=last]
 assert_eq(Object.setSlot("one", 1), 1);
