--- a/doc/specs/boolean.tex
+++ b/doc/specs/boolean.tex
@@ -1,7 +1,7 @@
 \section{Boolean}
 
 Booleans does not exist as a real type in \us. On the other hand, all
-objects in \us can be evaluated as boolean value especially the two
+objects in \us can be evaluated as Boolean value especially the two
 specific object \lstinline|true| and \lstinline|false|.
 
 \subsection{Prototypes}
