doc: add subsection Example.
	* doc/specs/dictionary.tex: here.

--- a/doc/specs/dictionary.tex
+++ b/doc/specs/dictionary.tex
@@ -133,7 +133,7 @@ d["cinq"];
 
 \end{itemize}
 
-Here is an example.
+\subsection{Example}
 
 \begin{urbiscript}
 var d = Dictionary.new("one", 1, "two", 2);
